deploy/develop/develop-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: develop-app
  namespace: develop
  labels:
    app: develop-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: develop-app    # indicates which Pods (with which labeles) need be handled by this Deployment
  template:
    metadata:         # indicates the metadata that will be added to each Pod
      labels:
        app: develop-app
    spec:
      # initContainers:
      # - name: migrations
      #   image: local/brackets-of-love:latest
      #   command:
      #   - rake
      #   - db:abort_if_pending_migrations
        
      containers:     # defines a running container inside the Pod
        - name: develop-app
          image:  us.gcr.io/brackets-of-love-379100/develop:latest
          imagePullPolicy: Always

          # readinessProbe:
          #   httpGet:
          #     # httpHeaders:
          #     # - name: Host
          #     #   value: example.com
          #     path: /robots.txt
          #     port: 3000
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          #   timeoutSeconds: 2
          ports:
            - containerPort: 3000   # which port of the container is exposed to the Pod
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
