deploy/develop/develop-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: develop-app
  namespace: develop
  labels: 
    group: develop-db
spec:
  type: LoadBalancer
  selector:             # indicates into which pods ClusterIP provides access
    app: develop-app
  ports:
    - protocol: TCP
      port: 3000          # port exposed outside ClusterIP
      targetPort: 3000    # port exposed by Pod
