deploy/develop/develop-mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: develop-mysql
  namespace: develop
spec:
  ports:
    - port: 3306
      name: develop-mysql
  clusterIP: None
  selector:
    app: develop-mysql
