deploy/develop/develop-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
# TODO: Probably more to do here setting up when deployed
kind: Ingress
metadata:
  name: develop-ingress-service
  namespace: develop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: develop-brackets-of-love.k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: develop-app
                port:
                  number: 8080
